<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2018 - Arcade Analytics LTD (https://arcadeanalytics.com)
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.arcadeanalytics</groupId>
        <artifactId>arcadedb-parent</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../</relativePath>
    </parent>

    <artifactId>arcadedb-engine</artifactId>
    <packaging>jar</packaging>

    <properties>
        <javacc-maven-plugin.version>2.6</javacc-maven-plugin.version>
        <disruptor.version>1.2.15</disruptor.version>
        <json.version>20190722</json.version>
        <lz4-java.version>1.7.0</lz4-java.version>
        <lucene.version>8.4.0</lucene.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>com.helger.maven</groupId>
                <artifactId>ph-javacc-maven-plugin</artifactId>
                <version>4.1.3</version>
                <executions>
                    <execution>
                        <id>jjc1</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>jjtree-javacc</goal>
                            <!--<goal>jjdoc</goal>-->

                        </goals>
                        <configuration>
                            <jdkVersion>1.8</jdkVersion>
                            <sourceDirectory>${basedir}/src/main/grammar</sourceDirectory>
                            <outputDirectory>${basedir}/src/main/java</outputDirectory>
                        </configuration>
                    </execution>

                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.conversantmedia</groupId>
            <artifactId>disruptor</artifactId>
            <version>${disruptor.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>
        <dependency>
            <groupId>org.lz4</groupId>
            <artifactId>lz4-java</artifactId>
            <version>${lz4-java.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-analyzers-common</artifactId>
            <version>${lucene.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-queryparser</artifactId>
            <version>${lucene.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>old-jdks</id>
            <activation>
                <jdk>(,1.8)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler-plugin.version}</version>
                        <configuration>
                            <source>11</source>
                            <target>11</target>
                            <encoding>UTF-8</encoding>
                            <showWarnings>true</showWarnings>
                            <showDeprecation>true</showDeprecation>

                            <!-- update -->
                            <verbose>false</verbose>
                            <fork>true</fork>
                            <compilerVersion>11</compilerVersion>
                            <!-- update -->

                            <compilerArgs>
                                <arg>--add-exports=jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>active-on-jdk-11</id>
            <activation>
                <jdk>(9,11)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler-plugin.version}</version>
                        <configuration>
                            <source>11</source>
                            <target>11</target>
                            <encoding>UTF-8</encoding>
                            <showWarnings>true</showWarnings>
                            <showDeprecation>true</showDeprecation>

                            <!-- update -->
                            <verbose>false</verbose>
                            <fork>true</fork>
                            <compilerVersion>11</compilerVersion>
                            <!-- update -->

                            <compilerArgs>
                                <arg>--add-exports=jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
